fix addto cart and checkout buttons color and align issue

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -496,25 +496,29 @@
   font-size: 15px;
 }
 #dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons {
-  width: 100%;
+  width: calc(100% + 20px);
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin: 0 -10px 10px -10px;
 }
 #dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons:before,
 #dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons:after {
   content: none;
 }
 #dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons a.button {
-  width: 47%;
   white-space: nowrap;
-  margin-right: 10px;
   height: 33px;
   box-sizing: border-box;
   text-align: center;
   color: #FFFFFF;
   font-size: 14px;
   line-height: 1em !important;
+  margin: 0 10px;
+}
+#dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons a.button:nth-child(2) {
+  background: transparent;
+  border-width: 1px;
+  border-style: solid;
 }
 #dokane-menu-cart-wrapper .widget_shopping_cart_content p.buttons .wcppec-cart-widget-button {
   display: flex;
